--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "barg-project",
   "version": "1.0.0",
-  "description": "",
   "main": "route.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,7 +14,11 @@
     "bcrypt-nodejs": "0.0.3",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.19",
+    "multer": "^1.4.1",
     "quill": "^1.3.6",
     "unescape": "^1.0.1"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [],
+  "description": ""
 }
