--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@ckeditor/ckeditor5-build-classic": "^12.0.0",
     "assert": "^1.4.1",
     "bcrypt-nodejs": "0.0.3",
+    "express-paginate": "^1.0.0",
     "mongodb": "^3.2.2",
     "mongoose": "^5.4.19",
     "multer": "^1.4.1",
+    "pug": "^2.0.3",
     "quill": "^1.3.6",
     "unescape": "^1.0.1"
   },
